--- a/public/index.html
+++ b/public/index.html
@@ -97,6 +97,68 @@
         </div>
     </section>
 
+    <!-- Features Section -->
+    <section class="features-section">
+        <div class="features-container">
+            <div class="features-carousel" id="featuresCarousel">
+                <div class="feature-item">
+                    <div class="feature-icon">
+                        <i class="fas fa-credit-card"></i>
+                    </div>
+                    <div class="feature-text">
+                        <h3>Pagos Seguros</h3>
+                        <p>Tarjetas de crédito/débito</p>
+                    </div>
+                </div>
+                <div class="feature-item">
+                    <div class="feature-icon stripe-icon">
+                        <i class="fab fa-stripe"></i>
+                    </div>
+                    <div class="feature-text">
+                        <h3>Stripe Payments</h3>
+                        <p>Procesamiento seguro</p>
+                    </div>
+                </div>
+                <div class="feature-item">
+                    <div class="feature-icon">
+                        <i class="fas fa-shipping-fast"></i>
+                    </div>
+                    <div class="feature-text">
+                        <h3>Envíos Gratis</h3>
+                        <p>En pedidos seleccionados</p>
+                    </div>
+                </div>
+                <div class="feature-item">
+                    <div class="feature-icon whatsapp-icon">
+                        <i class="fab fa-whatsapp"></i>
+                    </div>
+                    <div class="feature-text">
+                        <h3>Pedidos WhatsApp</h3>
+                        <p>Atención personalizada</p>
+                    </div>
+                </div>
+                <div class="feature-item">
+                    <div class="feature-icon">
+                        <i class="fas fa-shield-alt"></i>
+                    </div>
+                    <div class="feature-text">
+                        <h3>Compra Segura</h3>
+                        <p>SSL certificado</p>
+                    </div>
+                </div>
+                <div class="feature-item">
+                    <div class="feature-icon">
+                        <i class="fas fa-truck"></i>
+                    </div>
+                    <div class="feature-text">
+                        <h3>Entregas Rápidas</h3>
+                        <p>24-48 horas</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Filters Section -->
     <section class="filters">
         <div class="filters-container">
