--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
                 <img src="softduck.png" alt="SOFT DUCK" class="logo-image">
                 <div class="brand-text">
                     <span class="brand-name">SOFT DUCK</span>
-                    <span class="brand-tagline">Premium Quality</span>
+                    <span class="brand-tagline"></span>
                 </div>
             </div>
             <!-- Centered Search Bar -->
